updated javafx dependencies to v19.0.2; updated mysql-connector-j to v8.1.0;